--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+ml-service/venv
+ml-service/__pycache__
 
 # typescript
 *.tsbuildinfo
